reposition the predictive text to prevent a line-wrap

--- a/src/components/Mission.scss
+++ b/src/components/Mission.scss
@@ -3,6 +3,8 @@
   padding-bottom: 20px;
 
   h3 {
+    position: relative;
+
     margin-left: 10px;
     margin-top: 15px;
     margin-bottom: 15px;
@@ -18,12 +20,13 @@
     }
 
     .predictive {
+      position: absolute;
+      top: 2em;
+
       display: inline-block;
       width: 10rem;
       font-size: 0.6em;
       
-      position: relative;
-      top: 1em;
       overflow-x: visible;
       white-space: nowrap;
       
